Made some changes

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-wrap: balance;
+    
 }
 
 html {
@@ -29,6 +31,10 @@ body {
     color: var(--dark-color);
     background-color: var(--light-color);
     overflow-x: hidden;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 .container {
